crates/core/tests/ui/proc/fn/forbidden_param.rs
use interoptopus::ffi;

#[ffi]
#[allow(unused_variables)]
fn foo(new: u8) {}

fn main() {}
